--- a/Interactive Cards Details/index.html
+++ b/Interactive Cards Details/index.html
@@ -2,13 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+  <title>Frontend Mentor | Interactive card details form</title>
+
+</head>
+<body>
+  <section>
+    <div class="section-cards">
+      <div class="section-cards_first-card">
+        <div class="first-card_blacband"></div>
+        <div class="first-card_ccvcard">
+          <p class="ccvcard_ccv-card">
+            000
+          </p>
+        </div>
+      </div>
+      <div class="section-cards_Second-card">
+        <div class="Second-card_first-circule">
+          <div class="circule1"></div>
+          <div class="circule2"></div>
+        </div>
+        <div class="Second-card_Numbertarjet">
+          <p>0000  0000  0000  0000</p>
+        </div>
+        <div class="Second-card_NameTarjet">
+          <p> Jane Appleseed</p>
+        </div>
+        <div class="Second-card_DateTarjet">
+          <p>00/00</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="Section-Infoclientscards">
+      
+      <div class="Section-Infoclientscards_name">
+        <h1>Cardholder Name</h1>
+        <input type="text" placeholder="e.g. Jane Appleseed">
+        <p></p>
+      </div>
+      <div class="Section-Infoclientscards_number">
+        <h1>Cardholder Name</h1>
+        <input type="number" placeholder="e.g. 1234 5678 9123 0000">
+        <p></p>
+      </div>
+      <div class="Section-Infoclientscards_dateandCVV">
+        <div>
+          <h1>Exp. Date (MM/YY)</h1>
+          <input type="number" placeholder="MM">
+          <input type="number" placeholder="YY">
+          <p></p>
+        </div>
+        <div>
+          <h1>cvc</h1>
+          <input type="number" placeholder="e.g. 123">
+          <p></p>
+        </div>
+      </div>
+      <button>Confirm</button>
+    </div>
+  </section>  
+</body>
+</html>
+
+
+
+
+<!-- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Interactive card details form</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
@@ -37,7 +114,7 @@
 
   Confirm
 
-  <!-- Completed state start -->
+ 
 
   Thank you!
   We've added your card details
@@ -48,4 +125,4 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
-</html>
+</html> -->
