Mi primer avance

--- a/Interactive Cards Details/index.html
+++ b/Interactive Cards Details/index.html
@@ -30,13 +30,13 @@
             <div class="circule2"></div>
           </div>
           <div class="Second-card_Numbertarjet">
-            <p>0000  0000  0000  0000</p>
+            <p class="Second-card_Numbertarjet-text">0000  0000  0000  0000</p>
           </div>
           <div class="Second-card_NameTarjet">
-            <p> Jane Appleseed</p>
+            <p class="Second-card_NameTarjet_Text"> Jane Appleseed</p>
           </div>
           <div class="Second-card_DateTarjet">
-            <p>00/00</p>
+            <p class="Second-card_DateTarjet-text">00/00</p>
           </div>
         </div>
       </div>
@@ -46,12 +46,12 @@
       <div class="Section-Infoclientscards_name">
         <h1>Cardholder Name</h1>
         <input class="NameCardtext" type="text" placeholder="e.g. Jane Appleseed">
-        <p class="ErrorNameCardText">error</p>
+        <p class="ErrorNameCardText"></p>
       </div>
       <div class="Section-Infoclientscards_number">
         <h1>Cardholder Name</h1>
         <input class="NumberCardnum" type="number" placeholder="e.g. 1234 5678 9123 0000">
-        <p class="ErrorNumberCardText">error</p>
+        <p class="ErrorNumberCardText"></p>
       </div>
       <div class="Section-Infoclientscards_dateandCVV">
         <div class="infoDate">
@@ -60,15 +60,15 @@
             <input class="Input1Cards" type="number" placeholder="MM">
             <input class="Input2Cards" type="number" placeholder="YY">  
           </div>
-          <p class="ErrordateCardText"> error</p>
+          <p class="ErrordateCardText"></p>
         </div>
         <div class="DateCVV">
           <h1>cvc</h1>
           <input class="CVCCardtext" type="number" placeholder="e.g. 123">
-          <p class="ErrorCVVCardText"> error</p>
+          <p class="ErrorCVVCardText"> </p>
         </div>
       </div>
-      <button class="ConfirmButton" onclick="ValidacionRegistroCliente()">Confirm</button>
+      <button class="ConfirmButton">Confirm</button>
     </div>
   </section>  
   <script src="./script.js"></script>
@@ -76,57 +76,3 @@
 </html>
 
 
-
-
-<!-- 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Interactive card details form</title>
-
-  
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  0000 0000 0000 0000
-  Jane Appleseed
-  00/00
-
-  000
-
-  Cardholder Name
-  e.g. Jane Appleseed
-
-  Card Number
-  e.g. 1234 5678 9123 0000
-
-  Exp. Date (MM/YY)
-  MM
-  YY
-
-  CVC
-  e.g. 123
-
-  Confirm
-
- 
-
-  Thank you!
-  We've added your card details
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
-</html> -->
