Terminada la primer visual, pendiente el JS

--- a/tip-calculator-app-main/index.html
+++ b/tip-calculator-app-main/index.html
@@ -20,7 +20,7 @@
         <div class="CalculoCalculadora-IngresoTotal">
           <p>Bill </p>
           <input type="number" name="ValorGanancia" id="ValorGanancia" placeholder="0">
-          <span class="Logopesos"> <img src="./images/icons8-dólar-estadounidense-24.png" alt="" srcset=""></span>
+          <span class="Logopesos"> <img class="imgPesos" src="./images/icons8-dólar-estadounidense-24.png" alt="" srcset=""></span>
         </div>
         <div class="CalculoCalculadora-tipCalcu">
           <p>Select Tip %</p>
@@ -36,25 +36,25 @@
         <div class="CalculoCalculadora-NumDePersonas">
           <p>Number of People</p>
           <input type="number" name="ValorGanancia" id="ValorGanancia" placeholder="0">
-          <span class="LogoPerson"></span>
+          <span class="LogoPerson"><img class="SpanUser" src="./images/icons8-user-30.png" alt=""></span>
         </div>
         <div class="CalculoCalculadora-Resultado">
           <div class="Resultado_TipAmount">
             <div class="text-TipAmount">
-              <p>TipAmount</p>
-              <p>/Person</p>
+              <p class="text-resulta-p1">TipAmount</p>
+              <p class="text-resulta-p2">/Person</p>
             </div>
-            <p class="Valor-TipAmount">$0.0</p>
+            <p class="Valor-resulta-p3">$0.0</p>
           </div>
           <div class="Resultado_Total">
             <div class="text-Total">
-              <p>Total</p>
-              <p>/Person</p>
+              <p class="text-resulta-p1">Total</p>
+              <p class="text-resulta-p2">/Person</p>
             </div>
-            <p class="Valor-Total">$0.0</p>
+            <p class="Valor-resulta-p3">$0.0</p>
           </div>
+          <button>RESET</button>
         </div>
-        <button>RESET</button>
       </div>
     </menu>
   </section>
